Use PyLong_Type.tp_new for GLib.Pid

For GLib.Pid the original implementation for __new__ needs to be used,
as it is able to initialize the integer correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=705451